--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,13 @@
 version: "3.0"
 
 services:
+  service_client_builder:
+    container_name: service_client_builder
+    image: "node:18"
+    volumes:
+      - ".:/home/deployment/ClientProject"
+    command: sh -c "cd /home/deployment/ClientProject && npm i && npm run build-only"
+
   service_redis:
     container_name: service_redis
     image: redis:6.0.6
